# p1-rock-or-mine-pred

./: .gitignore  README.md  pyproject.toml
notebooks/: EDA.ipynb
